--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,39 @@
-.App{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: translateY(400px);
+.counter {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 20px;
+}
+
+.counter__output {
+  font-size: 80px;
+  color: #000;
+  padding-top: 50px;
+}
+
+.btn__container {
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+}
+
+.control__btn {
+  font-size: 20px;
+  padding: 10px 20px;
+  background-color: transparent;
+  color: rgb(16, 0, 54);
+  border: 1px solid rgb(16, 0, 54);
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  margin-top: 50px;
+  width: 200px;
+  height: 80px;
+}
+
+.control__btn:hover {
+  background-color: rgb(16, 0, 54);
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(16, 0, 54);
 }
